// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`вставка контентных опций в чистом реакте Несколько корней 1`] = `
<div>
  <div>
    <div>
      123
    </div>
    <div>
      456
    </div>
  </div>
</div>
`;

exports[`вставка контентных опций в чистом реакте Один корень 1`] = `
<div>
  <div>
    <div>
      123
    </div>
  </div>
</div>
`;

exports[`вставка контентных опций в чистом реакте Условие в корне 1`] = `
<div>
  <div>
    <div>
      123
    </div>
  </div>
</div>
`;

exports[`вставка контентных опций в чистом реакте Условие в корне 2`] = `
<div>
  <div />
</div>
`;

exports[`вставка контентных опций в чистом реакте Условие с else в корне 1`] = `
<div>
  <div>
    <div>
      123
    </div>
  </div>
</div>
`;

exports[`вставка контентных опций в чистом реакте Условие с else в корне 2`] = `
<div>
  <div>
    <div>
      456
    </div>
  </div>
</div>
`;

exports[`вставка контентных опций в чистом реакте передача дополнительных опций в контентную опцию Несколько корней 1`] = `
<div>
  <div>
    <div>
      123456
    </div>
    <div>
      456456
    </div>
  </div>
</div>
`;

exports[`вставка контентных опций в чистом реакте передача дополнительных опций в контентную опцию Один корень 1`] = `
<div>
  <div>
    <div>
      123456
    </div>
  </div>
</div>
`;

exports[`вставка контентных опций в чистом реакте передача дополнительных опций в контентную опцию Условие в корне 1`] = `
<div>
  <div>
    <div>
      123456
    </div>
  </div>
</div>
`;

exports[`вставка контентных опций в чистом реакте передача дополнительных опций в контентную опцию Условие в корне 2`] = `
<div>
  <div />
</div>
`;
